sound and user typing

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -8,7 +8,9 @@
         </div>
     </div>
     <div class="col-10 scroll d-flex flex-column-reverse">
+        <p id="activity"></p>
         <div id="messages" class=""></div>
+
         
     </div>
         <form id="form" action="">
