--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     
     <div class="row">
-    <div class="col-2" id="users">
+    <div class="col-2 scroll" id="users">
         <h1 id="room" class="text-center"></h1>
         <div id="usersList">
 
