--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -5,7 +5,7 @@
             <form action="/chat" method="get" class="d-block" id="userForm">
                 <div>
                     <label for="username" class="form-label">Username</label>
-                    <input type="text" name="username" class="form-control" id="name" placeholder="Username" />
+                    <input type="text" name="username" class="form-control" id="name" placeholder="Username" maxlength="12"/>
 
                 </div>
                 <div>
