--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -10,7 +10,7 @@
                 </div>
                 <div>
                     <label for="room" class="form-label">Room</label>
-                    <input type="text" name="room" id="room" class="form-control" placeholder="Room"/>
+                    <input type="text" name="room" id="room" class="form-control" placeholder="Room" maxlength="15"/>
                 </div>
 
                 <button type="submit" class="btn btn-lg mt-2">Submit</button>
