--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,6 +92,10 @@ html,body {
     scroll-behavior: smooth;
     display: inline-block;
 }
+.room{
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 span{
     font-size: 1.5rem;
     vertical-align: middle;
