--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -2,7 +2,7 @@
     
     <div class="row">
     <div class="col-2 scroll" id="users">
-        <h1 id="room" class="text-center"></h1>
+        <h1 id="room" class="room text-center"></h1>
         <div id="usersList">
 
         </div>
